# system_state

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  meson.build
examples/: backlight.cpp  battery.cpp  block.cpp  cpu_usage.cpp  kernel.cpp  network_interface.cpp  sound.cpp  system.cpp  thermal.cpp  user.cpp  version.cpp
examples/c/: backlight.c  battery.c  macro.h  sound.c  version.c
src/: backlight.cpp  battery.cpp  block.cpp  cpu_usage.cpp  error.cpp  kernel.cpp  network_interface.cpp  optional.cpp  sound.cpp  strerror.cpp  strerror.hpp  system.cpp  thermal.cpp  user.cpp  util.cpp  util.hpp  version.cpp  version.test.cpp
src/c/: assert_c.hpp  backlight_c.cpp  battery_c.cpp  sound_c.cpp  string_c.cpp
system_state/: core.hpp  error.hpp  optional.hpp  system_state.h  system_state.hpp  version.h.in  version.hpp.in
tests/: backlight.test.cpp  battery.test.cpp  block.test.cpp  cpu_usage.test.cpp  kernel.test.cpp  network_interface.test.cpp  sound.test.cpp  system.test.cpp  thermal.test.cpp  user.test.cpp  version.test.cpp
